<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Five in a row</string>
    
    <!-- main activity buttons -->
    <string name="cont">Continue</string>
    <string name="start">New Game</string>
    <string name="level">Level</string>
    <string name="high">High Scores</string>
    <string name="quit">Quit</string>
    
    <!-- multi dialog -->
    <string name="multiTitle">Dual player</string>
    <string name="multiBT">Bluetooth</string>
    <string name="multiInternet">Internet</string>
    <string name="multiTwoPlayer">Same device</string>

    <!-- options menu -->
    <string name="ai">AI timeout</string>
    <string name="levelDialog">Select Level</string>
    <string name="options">Options</string>
    <string name="sens">Touch\nsensitivity</string>
    <string name="style">Style</string>
    <string name="language">Language</string>
    <string name="quality">Graphics Quality</string>
    <string name="lowq">Low</string>
    <string name="highq">High</string>
    <string name="animation">Animation</string>
    <string name="fullscreen">Full screen</string>
    <string name="vibration">Vibration</string>
    
    <!-- levels -->
    <string name="beginner">Beginner</string>
    <string name="average">Average</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="veryHard">Very Hard</string>
    
    <!-- style -->
    <string name="classic">Classic</string>
    <string name="gomoku">Gomoku</string>
    <string name="modern">Modern</string>
    
    <string name="_none">None</string>
    <string name="_style">Style</string>
    <string name="_level">Level</string>
    <string name="_quality">Quality</string>
    
   <!-- new game -->
   <string name="androidStart">May I start?</string>
   <string name="yes">Yes</string>
   <string name="no">No</string>
   
   <!-- High score View -->
   <string name="hlevel">Level:\t</string>
   <string name="hwins">Wins:\t</string>
   <string name="hloses">Loses:\t</string>
   <string name="hbest">Best Time:\t</string>
   <string name="hdate">Date:\t</string>
    <string name="hback">Back</string>
            
    <!-- restart dialog -->
    <string name="restartTitle">Warning</string>
    <string name="restartPos">Ok</string>
    <string name="restartNeg">Cancel</string>
    <string name="restartMsg">
        In order to apply changes perhaps you need to restart the
        application. Do you want to continue?        
    </string>
    
    <!-- android dialog -->
    <string name="menuDialog"></string>    
    <string name="restart">Restart game</string>
    <string name="backToMenu">Back to menu</string>
    
    <string name="newGame">New game?</string>
    <string name="existedSavedGameTitle">Saved game</string>
    <string name="existedSavedGameMsg">There is an unfinished game. Do you retreat?</string>
    
    <!-- bluetooth -->
    <string name="devices">Devices</string>
    <string name="refresh">Refresh</string>
    <string name="noBTdevice">Your phone has no Bluetooth device!</string>
    <string name="enableBT">Turning on bluetooth...</string>
    <string name="loading">Searching, please wait...</string>
    <string name="connectionLost">Connection lost.</string>
    <string name="BTconnReq">Somebody wants to play with you.</string>
    <string name="BTconnReqAccept">Accept</string>
    <string name="BTconnReqDeny">Deny</string>
    <string name="BTcannotConnect">Cannot connect to the selected device.</string>
    
    <!-- internet -->
    <string name="connect">Connect</string>
    <string name="enemys">Search for enemy. Please Wait.</string>
    <string name="begin">You start</string>
    <string name="exitQuestion">Do you really want to exit?</string>
    <string name="opponentStart">Enemy starts</string>
    <string name="noEnemy">Cannot find enemy. Do you want to search again?</string>
    <string name="again">Yes</string>
    <string name="cancel">No</string>
    <string name="networkError">Connection lost.</string>
    <string name="finish">Connection lost. New Game?</string>
    
    <string name="about">About</string>
    <string name="aboutContent">
	    Five in a row v2.2.5
	    \n\n
	    Players put their signs in an empty square by turns.
	    The goal is to collect five signs in an unbroken row
	    horizontally, vertically or diagonally.
	    \n\n
	    Developed by:\n
	    Tangl Andras, Hungary
    </string>
</resources>